# Mujoco-Isaac

./: README.md  bc_eval.py  bc_train.py  dev-requirements.txt  prefs_make_pairs.py  pyproject.toml  requirements.txt  reward_model_train.py  teleop_ws_server.py  train_with_reward_model.py
assets/: dexbench_three.xml  dexbench_two.xml
isaac/: create_dexbench_stage.py  play_dexbench_teleop.py  play_dexbench_teleop_state.py  utils_isaac.py
label_ui/: app.py
label_ui/teleop_web/: index.html
label_ui/templates/: index.html
scripts/: teleop_record.py
src/dexbench/: __init__.py  dexbench_env.py  dexbench_env_three.py
tools/: set_ci_badge.py
