
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexbench"
version = "0.1.0"
description = "DexBench: teleop → BC → RLHF → RL (MuJoCo + Isaac)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="DexBench"}]
dependencies = [
    "mujoco>=3.1.6",
    "numpy>=1.24",
    "torch>=2.1",
    "tqdm>=4.66",
    "flask>=3.0",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.4",
    "matplotlib>=3.8",
    "websockets>=12.0",
]

[project.optional-dependencies]
inputs = ["pygame>=2.5","hidapi>=0.14"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dexbench*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I"]
